@@ -2453,6 +2453,9 @@ have_mpeg2encode='no' ; if test "$MPEGEncodeDelegate" != "$MPEGEncodeDelegateDef
 have_ra_ppm='no'  ; if test "$RADDecodeDelegate" != "$RADDecodeDelegateDefault" ; then have_ra_ppm='yes' ; fi
 have_ralcgm='no'  ; if test "$CGMDecodeDelegate" != "$CGMDecodeDelegateDefault" ; then have_ralcgm='yes' ; fi
 
+# Automake conditional to support test suite
+AM_CONDITIONAL(HasPSDelegate, test "$have_gs" = 'yes')
+
 # Test for optional rst2html.py utility and define automake conditional HasRST2HTML if found.
 AC_PATH_PROG(RST2HTML, rst2html.py, rst2html.py)
 have_rst2html='no' ; if test "$RST2HTML" != 'rst2html' ; then have_rst2html='yes' ; fi
